test to make sure postdata is capturing info correctly

--- a/templates/info.html
+++ b/templates/info.html
@@ -75,6 +75,9 @@
             <div>
                 String Error: {{ data[7] }}
             </div>
+            <div>
+                Post Data String: {{ data[8] }}
+            </div>
         </div>
     </body>
 </html>
