--- a/templates/info.html
+++ b/templates/info.html
@@ -78,6 +78,9 @@
             <div>
                 Post Data String: {{ data[8] }}
             </div>
+            <div>
+                Post Response: {{ data[9] }}
+            </div>
         </div>
     </body>
 </html>
