change hs_context to a json string instead of a url query string, append to other params query string, cookie data now working

--- a/templates/info.html
+++ b/templates/info.html
@@ -15,29 +15,9 @@
                 Back to form
             </a>
         </div>
-        <div style="margin-top: 100px;">
-            <div>
-                Name: {{ info.get('firstname', '') }}
-            </div>
-            <div>
-                Last Name: {{ info.get('lastname', '')}}
-            </div>
-            <div>
-                Email: {{ info.get('email', '')}}
-            </div>
-            <div>
-                Position: {{ info.get('applying_for_position', '')}}
-            </div>
-            <div>
-                Description: {{ info.get('role_interest_description', '')}}
-            </div>
-            <div>
-                HubSpot Cookie: {{ hs_cookie }}
-            </div>
-        </div>
         <div>
             <div>
-                <h1>From "format_post_data()"</h1>
+                <h1>Form Data, including analytics</h1>
             </div>
             <div>
                 Portal Id: {{ data[0] }}
