fix array indexing for description and position on info.html

--- a/templates/info.html
+++ b/templates/info.html
@@ -35,10 +35,10 @@
                 Email: {{ data[2]['email'] }}
             </div>
             <div>
-                Position: {{ data[2]['position']}}
+                Position: {{ data[2]['applying_for_position']}}
             </div>
             <div>
-                Description: {{ data[2]['description']}}
+                Description: {{ data[2]['role_interest_description']}}
             </div>
             <div>
                 HS Cookie: {{ data[3] }}
