--- a/templates/info.html
+++ b/templates/info.html
@@ -59,7 +59,7 @@
                 Post Data String: {{ data[8] }}
             </div>
             <div>
-                Post Response: {{ data[9] }}
+                POST Response: {{ data[9] }}
             </div>
         </div>
     </body>
