add custom event tracking to form submission

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,14 @@
         <title>
             Advocate Form
         </title>
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/base-min.css">
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/styles.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!-- <script src="/static/scripts.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="/static/scripts.js"></script>
     </head>
     <body>
         <h1>Dev Advocate Exercise Form</h1>
-          <form class="pure-form pure-form-aligned" action="{{ url_for('submit') }}" method="POST">
+          <form class="pure-form pure-form-aligned" action="{{ url_for('submit') }}" method="POST" onsubmit="triggerCustomEvent()">
                 <fieldset>
                     <div class="pure-control-group">
                         <label for="firstname">First Name</label>
@@ -45,7 +44,7 @@
                         <textarea cols="20" name="role_interest_description" rows="10" placeholder="What appeals to me about this position..."></textarea>
                     </div>
                     <div class="pure-controls">
-                        <button type="submit" class="pure-button pure-button-primary">Submit</button>
+                        <button type="submit" class="pure-button pure-button-primary" id="submitBtn">Submit</button>
                     </div>
                 </fieldset>
             </form>
