--- a/templates/info.html
+++ b/templates/info.html
@@ -1,9 +1,8 @@
 <html>
     <head>
         <title>
-            Advocate Form
+            Form Submission Info
         </title>
-        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/base-min.css">
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -17,7 +16,7 @@
         </div>
         <div>
             <div>
-                <h1>Form Data, including analytics</h1>
+                <h1>Form Data, including hs_context</h1>
             </div>
             <div>
                 Portal Id: {{ data[0] }}
@@ -59,7 +58,7 @@
                 Post Data String: {{ data[8] }}
             </div>
             <div>
-                POST Response: {{ data[9] }}
+                POST Response (look here for potential errors): {{ data[9] }}
             </div>
         </div>
     </body>
