--- a/templates/info.html
+++ b/templates/info.html
@@ -58,7 +58,8 @@
                 Post Data String: {{ data[8] }}
             </div>
             <div>
-                POST Response (look here for potential errors): {{ data[9] }}
+                <strong>
+                POST Response (look here for potential errors)</strong>: {{ data[9] }}
             </div>
         </div>
 
